# guidance-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt  test.py
backend/app/: main.py
backend/app/api/: routes_chat.py  routes_planned_educations.py
backend/app/core/: config.py  tenants.py
backend/app/llm/: gemini_client.py  history.py  prompts.py  tool_router.py
backend/app/rag/: format.py  index.py  service.py
backend/app/schemas/: chat.py
backend/app/tools/: alvis.py  planned_educations.py  skolenhetsregistret.py  skolverket_planned.py  syllabus.py
backend/tenants/: strangnas.json
backend/tests/: test_rag.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/themes/: 0123.css  0486.css
frontend/src/app/: layout.tsx  page.module.css  page.tsx  tenantThemes.ts
frontend/src/components/: Chat.tsx  SourcesPanel.tsx
tenants/: strangnas.json
