[project]
name = "guidance-bot-backend"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-genai",
    "python-dotenv",
    "requests",
    "sentence-transformers",
    "faiss-cpu",
    "pypdf",
    "bs4"
]

[tool.uvicorn]
factory = false
